# doc-agent

./: .env.template  .gitignore  README.md  TODO.md  pyproject.toml
data/indices/pip-outdated/: metadata.json
data/samples/100091132640673193105272127659041729487/0/: key.yaml
data/samples/100381051524107869346950625574775371383/0/: key.yaml
docassist/: __main__.py  chunkdown.py  config.py  directories.py  entrypoint.py  graph.py  idgen.py  llmio.py  main.py  models.py  otel.py  parametrized.py  preindexing_graph.py  processing_graph.py  retries.py  simple_xml.py  structured_agent.py  subjects.py  system_prompts.py  tool_exceptions.py  tools.py  usage.py
docassist/agents/: note_taker.py
docassist/agents/generators/: facts_from_file.py  notes_from_dir.py  notes_from_file.py
docassist/agents/rag/: data.py  deduplication.py  exploder.py  query_rephrasing.py  reranking.py  tool.py
docassist/index/: document.py  faiss.py  openai_embedder.py  protocols.py  utils.py
docassist/preindexing/: perspectives.py  preindexing_graph.py
docassist/preindexing/agents/: facts_from_file.py  notes_from_dir.py  notes_from_file.py
docassist/sampling/: common.py  embedder.py  model.py  protocols.py  usual.py
docassist/sampling/slots/: _fsio.py  deferred.py  fs.py
docassist/sampling/std/: controller.py  provider.py  sampler.py  util.py
docassist/structure/: model.py  spec.py
docassist/structure/materialize/: agent.py  materializer.py  models.py  tasks.py
tests/: conftest.py  test_simple_xml.py  test_sliding_window.py
(+6803 files in other folders)
